# Iceberg_Detection

./: .gitignore  README.md  app.py  iceberg.yaml  index_html.txt  lib.py  main.py  pyproject.toml  Как я запускаюсь.txt  код итоговый.txt
results/: detector_metrics.json  drift_metrics.json  speed_metrics.json  statoil_metrics.json  summary.json
runs/iceberg/: args.yaml  events.out.tfevents.1778781777.e7fa0fbb8c4d.3947.0  results.csv
templates/: index.html
