[project]
name = "demo-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.3",
    "pillow>=12.2.0",
    "pip>=26.1.1",
    "scikit-learn>=1.8.0",
    "ultralytics>=8.4.50",
]
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
